--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -35,6 +35,7 @@ android {
             buildConfigField "String", "BASE_URL", "\"https://10.0.2.2:8080/api/\""
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     buildFeatures {
@@ -126,9 +127,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     //Firebase authentication
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.facebook.android:facebook-login:8.1.0'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+
+    // Declare the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth'
+
+    // Also declare the dependency for the Google Play services library and specify its version
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
 
     // lib for SMS verification (Phone Auth)
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
