--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.account.register.RegisterActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
