add bottom navigation bar

--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.account.register.RegisterActivity" />
+        <activity android:name=".ui.main.MainActivity"
+            android:exported="true"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
