--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -153,5 +153,11 @@ dependencies {
 
     //hash id
     implementation "org.hashids:hashids:1.0.3"
+
+    def nav_version = "2.4.0-beta01"
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
 }
