--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".ui.account.register.RegisterActivity" />
         <activity android:name=".ui.main.MainActivity"
             android:exported="true"/>
+        <activity android:name=".ui.main.search.create.CreatePostActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
