--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -51,6 +51,13 @@ android {
 }
 
 dependencies {
+    def fragment_version = "1.3.4"
+    implementation "androidx.fragment:fragment:$fragment_version"
+
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.4.0-beta02'
+    implementation 'androidx.navigation:navigation-ui:2.4.0-beta02'
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
@@ -154,9 +161,5 @@ dependencies {
     //hash id
     implementation "org.hashids:hashids:1.0.3"
 
-    def nav_version = "2.4.0-beta01"
-
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
 
 }
