--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".ui.main.MainActivity"
             android:exported="true"/>
         <activity android:name=".ui.main.search.create.CreatePostActivity" />
+        <activity android:name=".ui.main.search.detail.PostDetailActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
