--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:exported="true"/>
         <activity android:name=".ui.main.search.create.CreatePostActivity" />
         <activity android:name=".ui.main.search.detail.PostDetailActivity" />
+        <activity android:name=".ui.main.university.details.UniversityDetailsActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
