--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".ui.main.search.create.CreatePostActivity" />
         <activity android:name=".ui.main.search.detail.PostDetailActivity" />
         <activity android:name=".ui.main.university.details.UniversityDetailsActivity" />
+        <activity android:name=".ui.main.university.field.FieldDetailActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
