--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "BASE_URL", "\"http://10.0.2.2:8080/\""
+            buildConfigField "String", "BASE_URL", "\"https://aee-mobile.herokuapp.com/\""
             //minifyEnabled true
             //proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             firebaseCrashlytics {
